--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<%= stylesheet_link_tag "home_styles", media: "all", "data-turbolinks-track": "reload" %>
+
+<div class="home-container">
+  <div class="home-heading">The Budget App</div>
+
+  <div class="home-buttons">
+    <%= link_to "LOG IN", new_user_session_path, class: "home-login-button" %>
+    <%= link_to "SIGN UP", new_user_registration_path, class: "home-signup-button" %>
+  </div>
+</div>
