--- a/app/views/balances/index.html.erb
+++ b/app/views/balances/index.html.erb
@@ -8,10 +8,13 @@
             <rect y="60" width="100" height="10"></rect>
           </svg>
           <h1 class="balance-header">BALANCE SHEET</h1>
-          <svg id="src-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+          <%# <svg id="src-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
             <circle cx="11" cy="11" r="8"/>
             <line x1="21" x2="16.65" y1="21" y2="16.65"/>
-          </svg>
+          </svg> %>
+           <% if user_signed_in? %>
+      <div class="sign-out-btn"> <%= button_to "Log out", '/users/sign_out', method: :delete %> </div>
+    <%end%>
     </div>
 
 
