--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -44,6 +44,8 @@ body {
   border: 1px solid #ccc;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   background-color: #fff;
+  justify-content: center;
+  align-items: center;
 }
 
 @media (max-width: 700px) {
@@ -64,7 +66,7 @@ body {
 .field input[type="text"],
 .field input[type="email"],
 .field input[type="password"] {
-  width: 100%;
+  width: 300px;
   padding: 10px;
   border: 1px solid #ccc;
 }
@@ -89,6 +91,7 @@ body {
   border-radius: 3px;
   cursor: pointer;
   transition: background-color 0.2s;
+  margin: auto;
 }
 
 .actions input[type="submit"]:hover {
