Changed my add button

--- a/app/assets/stylesheets/balances_styles.css
+++ b/app/assets/stylesheets/balances_styles.css
@@ -76,15 +76,22 @@ a {
   right: 2rem;
   background-color: #5fb523;
   color: white;
-  width: 4rem;
+  width: 100%;
   height: 4rem;
-  border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 2rem;
   cursor: pointer;
   transition: background-color 0.2s;
+}
+
+.add-button .border {
+  border: 1px solid white;
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .add-button-link {
