--- a/app/views/balances/index.html.erb
+++ b/app/views/balances/index.html.erb
@@ -35,5 +35,7 @@
 </div>
 
 <div class="add-button">
-  <%= link_to "+", new_balance_path, class: "add-button-link" %>
+<p class = "border">
+  <%= link_to "scan", new_balance_path, class: "add-button-link" %>
+  </p>
 </div>
